# agent-uap-desktop-pygui

./: .gitignore  HANDOFF-2026-04-15.md  README.md  pyproject.toml  pyrightconfig.json  requirements-base.txt  requirements-optional.txt  requirements.txt  update_report.py  复杂系统未来势态量化预测统一智能体可行性研究与总体实施方案报告.md
config/: uap.example.yaml  uap.yaml
docs/: MODELING_DELIVERY_PLAN.md  MODELING_DOMAIN_DATA.md  MODELING_SECURITY_NOTES.md  MODELING_SMOKE_CHECKLIST.md  SY散度完整分析报告.md  UAP_DEVELOPMENT.md  UAP_LAYERING.md  handoff-ruyi72-to-uap.md  ruyi72-architecture-summary.md  技术方案报告.md  新建 文本文档.txt
docs/architecture/: folder-conventions.md
docs/设计指南/: AI智能体上下文压缩系统设计方案参考指南.md  AI智能体技能工具系统扩展设计指南-自动技能工匠.md  AI智能体技能工具系统设计指南.md  AI智能体行动模式设计指南.md  AI智能体行动模式设计指南（重构版）.md  AI智能体记忆体系设计指南.md  UAP技能系统设计指南.md  cs架构系统数据存储方案.md  cs架构记忆知识系统数据库选型分析第二版.md  大模型驱动的预测技能构建智能体(DeepSeek方案) .md  智能体人机认知对齐设计指南v0.3.md  智能体记忆系统设计方案参考指南（完整版）.md
resources/config/: README.txt  allowed_cmd.json.example  allowed_ps_cmdlets.json.example
resources/web/: app.js  cards.js  index.html  model_graph.js  style.css  uap_markdown.js  visualize.js
src/: app.py
src/uap/: __init__.py  api.py  config.py
src/uap/adapters/: __init__.py
src/uap/analysis/: __init__.py  chaos.py  entropy.py  turbulence.py
src/uap/application/: __init__.py  ask_mode_registry.py  dst_pipeline.py  memory_extraction_service.py  modeling_intent_classifier.py  prediction_service.py  project_service.py
src/uap/card/: __init__.py  generator.py  manager.py  models.py  persistence.py
src/uap/common/: __init__.py  observability.py
src/uap/contract/: __init__.py  memory_schemas.py
src/uap/core/: __init__.py
src/uap/history/: store.py  (+2 more)
src/web/: app.js  index.html  style.css  visualize.js
tests/: test_agent_memory_persistence.py  test_architecture_layers.py  test_ask_mode_registry.py  test_ask_user_card.py  test_atomic_implemented_registry.py  test_card_persistence.py  test_context_compression.py  test_conversation_store.py  test_dst_card_pipeline.py  test_dst_completion_policy.py  test_dst_manager_stage.py  test_entity_graph.py  test_knowledge_kb.py  test_llm_remote.py  test_milvus_kb_availability.py  test_minimax_model_normalize.py  test_modeling_intent_classifier.py  test_modeling_interrupt.py  test_modeling_mode.py  test_modeling_substantive.py  test_novice_modeling_context.py  test_plan_agent.py  test_project_path_utils.py  test_prompts_assets.py  test_react_langgraph.py  test_search_knowledge_skill.py  test_skill_preconditions.py  test_sqlite_vec_kb.py  test_web_search_adapter.py  test_web_search_depth.py  test_win11_project_fs_skills.py  test_win_cli_skills.py
web/: app.js  cards.css  style.css
(+166 files in other folders)
