[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uap-desktop"
version = "0.1.0"
description = "UAP - 复杂系统未来势态量化预测统一智能体（桌面客户端）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pywebview>=5.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "loguru>=0.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.0",
]
vector = [
    "torch>=2.0",
    "sentence-transformers>=2.0",
]
legacy-db = [
    "mysql-connector-python>=8.0",
    "redis>=5.0",
    "elasticsearch>=8.0",
    "pymilvus>=2.3",
    "neo4j>=5.0",
    "pymongo>=4.0",
    "minio>=7.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/local/uap-desktop"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uap.prompts = ["assets/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
